welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: not found: value estSurbiscuit
while(!estSurbiscuit){avance
       ^