welcome.lessons.welcome.variables.Variables.scala.code
var nbpas=0
while(!estSurbiscuit){avance
nbpas=nbpas+1}
prendBiscuit
for(i<- 1 to nbpas){recule}
poseBiscuit